--- a/app/src/main/res/layout/fragment__user__list.xml
+++ b/app/src/main/res/layout/fragment__user__list.xml
@@ -15,6 +15,8 @@
             android:id="@+id/RecylclerView_user"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
