--- a/app/src/main/res/menu/popupmenu_users.xml
+++ b/app/src/main/res/menu/popupmenu_users.xml
@@ -2,7 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/modifierUser"
-        android:title="Modifier" />
+        android:title="Modifier(A VENIR)" />
+    <item
+        android:id="@+id/locationsUser"
+        android:title="Locations" />
 
     <item
         android:id="@+id/supprimerUser"
