--- a/app/src/main/res/layout/fragment__location__list_for_a_user.xml
+++ b/app/src/main/res/layout/fragment__location__list_for_a_user.xml
@@ -11,42 +11,54 @@
         android:layout_height="match_parent"
         tools:context=".UI.MainActivity">
 
+        <ImageView
+            android:id="@+id/user_image_location"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/avatars" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecylclerView_Location"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toTopOf="@+id/input_nom_location_to_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/user_email_list"
+            app:layout_constraintTop_toBottomOf="@+id/user_image_location"
             tools:itemCount="5"
-            tools:listitem="@layout/location_item" />
+            tools:listitem="@layout/location_item">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
         <TextView
             android:id="@+id/user_name_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
             android:text="TextView"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/user_image_location"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/user_email_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
             android:text="TextView"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/user_image_location"
             app:layout_constraintTop_toBottomOf="@+id/user_name_list" />
 
         <Button
