--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/UserCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#28FFC107"
         app:cardCornerRadius="5dp"
@@ -20,14 +20,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/user_image_list"
+                android:layout_width="100dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars" />
+
             <TextView
                 android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/deletebutton"
+                app:layout_constraintStart_toEndOf="@+id/user_image_list"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -35,11 +48,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 android:text="TextView"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/deletebutton"
+                app:layout_constraintStart_toEndOf="@+id/user_image_list"
                 app:layout_constraintTop_toBottomOf="@+id/location_name" />
 
             <ImageButton
